Edit index & css files to adapt work elements to desktop version.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </header>
     <section class="headline poppins">
-      <h1 class="name">I'm Juan Carlos. <br />Glad to see you!</h1>
+      <h1 id="delay" class="name">I'm Juan Carlos. <br />Glad to see you!</h1>
       <p class="desc">
         I'm a software developer! I can help you build a product, feature or
         website. Look through some of my work and experience! If you like what
@@ -288,6 +288,108 @@
             <li><p class="stack poppins">JavaScript</p></li>
           </ul>
           <button type="button" class="see-project poppins">See project</button>
+        </div>
+      </div>
+
+      <div class="grid-1b">
+        <div class="rows">
+            <div class="photo1">
+                <img class="work1b-img" alt="work 1" width="" height="" src="images/job3b.png">
+            </div>
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Tonic</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">CANOPY</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Back End Dev</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2015</p></li>
+                </ul>
+                <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Multi-Post Stories</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">FACEBOOK</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Full Stack Dev</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2015</p></li>
+                </ul>
+                <p class="desc2 poppins">Experimental content creation feature that allows users to add to an existant story over the course of a day without spamming their friends.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">Ruby on rails</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+            <div class="photo2">
+                <img class="work1b-img" alt="work 2" width="" height="" src="images/job4b.png">
+            </div>
+        </div>
+        <div class="rows">
+            <div class="photo1">
+                <img class="work1b-img" alt="work 3" width="" height="" src="images/job1b.png">
+            </div>
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Facebook 360</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">FACEBOOK</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Full Stack Dev</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2015</p></li>
+                </ul>
+                <p class="desc2 poppins">Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and video on Gear VR.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">Ruby on rails</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Uber navigation</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">Uber</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Lead Developer</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2018</p></li>
+                </ul>
+                <p class="desc2 poppins">A smart assistant to make driving more safe, efficient and fun by unlocking your most expensive computer, your car.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">Ruby on rails</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+            <div class="photo2">
+                <img class="work1b-img" alt="work 4" width="" height="" src="images/job2b.png">
+            </div>
         </div>
       </div>
     </section>
