Edit index and css files to adapt toolbar & heading sections for desktop version.

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
   <body>
     <header class="toolbar">
       <div class="container-2">
-        <div class="logo">
-          <a href="#home"><p class="logo-txt poppins rotate">My Logo</p></a>
+        <div class="logo"><a href="#home"><p class="logo-txt rotate poppins">My Logo</p></a></div>
+        <nav class="menu"><div><img class="menu-im" alt="Menu" width="48px" height="48px" src="images/menu1.png"></div></nav>
+    </div>
+    <nav>
+        <div class="container-5">
+            <div class="logo"><a href="#home"><p class="logo-txt poppins">My Logo</p></a></div>
+            <div class="">
+                <ul class="nav-menu">
+                    <li><a class="poppins nav-menu-text" href="#portfolio">Portfolio</a></li>
+                    <li><a class="poppins nav-menu-text" href="#about-me">About</a></li>
+                    <li><a class="poppins nav-menu-text" href="#contact-form">Contact</a></li>
+                </ul>
+            </div>
         </div>
-        <nav class="menu">
-          <img
-            class="menu-im"
-            alt="Menu"
-            width="24px"
-            height="24px"
-            src="images/menu.svg"
-          />
-        </nav>
-      </div>
+    </nav>
     </header>
     <section class="headline poppins">
       <h1 id="delay" class="name">I'm Juan Carlos. <br />Glad to see you!</h1>
@@ -294,7 +296,7 @@
       <div class="grid-1b">
         <div class="rows">
             <div class="photo1">
-                <img class="work1b-img" alt="work 1" width="" height="" src="images/job3b.png">
+                <img class="work1b-img grow" alt="work 1" width="" height="" src="images/job3b.png">
             </div>
             <div class="work1b">
                 <h2 class="work-text1b poppins">Tonic</h2>
@@ -338,12 +340,12 @@
                 </nav>
             </div>
             <div class="photo2">
-                <img class="work1b-img" alt="work 2" width="" height="" src="images/job4b.png">
+                <img class="work1b-img grow" alt="work 2" width="" height="" src="images/job4b.png">
             </div>
         </div>
         <div class="rows">
             <div class="photo1">
-                <img class="work1b-img" alt="work 3" width="" height="" src="images/job1b.png">
+                <img class="work1b-img grow" alt="work 3" width="" height="" src="images/job1b.png">
             </div>
             <div class="work1b">
                 <h2 class="work-text1b poppins">Facebook 360</h2>
@@ -388,7 +390,7 @@
                 </nav>
             </div>
             <div class="photo2">
-                <img class="work1b-img" alt="work 4" width="" height="" src="images/job2b.png">
+                <img class="work1b-img grow" alt="work 4" width="" height="" src="images/job2b.png">
             </div>
         </div>
       </div>
