Edit css & html files to adjust work section for desktop version.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="toolbar">
       <div class="container-2">
         <div class="logo"><a href="#home"><p class="logo-txt rotate poppins">My Logo</p></a></div>
-        <nav class="menu"><div><img class="menu-im" alt="Menu" width="48px" height="48px" src="images/menu1.png"></div></nav>
+        <nav class="menu"><div><img class="menu-im" alt="Menu" width="28px" height="28px" src="images/menu.svg"></div></nav>
     </div>
     <nav>
         <div class="container-5">
