--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="container-2">
         <div class="logo"><a href="#home"><p class="logo-txt rotate poppins">My Logo</p></a></div>
         <nav class="menu"><div><img class="menu-im" alt="Menu" width="28px" height="28px" src="images/menu.svg"></div></nav>
-    </div>
-    <nav>
+      </div>
+      <nav>
         <div class="container-5">
             <div class="logo"><a href="#home"><p class="logo-txt poppins">My Logo</p></a></div>
             <div class="">
@@ -30,7 +30,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+      </nav>
     </header>
     <section class="headline poppins">
       <h1 id="delay" class="name">I'm Juan Carlos. <br />Glad to see you!</h1>
@@ -42,17 +42,7 @@
       <h3 class="connect">LET'S CONNECT</h3>
       <ul class="container-3">
         <li>
-          <a
-            class="twitter"
-            href="https://www.twitter.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              alt="twitter"
-              width="20px"
-              height="20px"
-              src="images/twitter.png"
-          /></a>
+          <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
         </li>
         <li>
           <a
@@ -109,35 +99,17 @@
       <div class="grid-1">
         <!-- First card -->
         <div class="work1">
-          <img
-            class="work1-img grow"
-            alt="work 1"
-            width="590px"
-            height="440px"
-            src="images/job1.png"
-          />
+          <img class="work1-img grow" alt="work 1" width="590px" height="440px" src="images/job1.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
             <li>
-              <img
-                class="dot"
-                alt=""
-                width="16px"
-                height="16px"
-                src="images/dot1.png"
-              />
+              <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
             </li>
             <li><p class="bed poppins">Back End Dev</p></li>
             <li>
               <p>
-                <img
-                  class="dot"
-                  alt=""
-                  width="16px"
-                  height="16px"
-                  src="images/dot1.png"
-                />
+                <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
               </p>
             </li>
             <li><p class="year poppins">2015</p></li>
@@ -395,7 +367,94 @@
         </div>
       </div>
     </section>
-    <section class="about_myself">
+    <section id="about-me" class="about_myself">
+      <div class="first">
+          <h2 class="about poppins">About Myself</h2>
+          <p class="desc4 poppins">Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+          <p class="connect poppins">LET'S CONNECT</p>
+          <ul>
+              <div class="container-4">
+                  <li>
+                      <a class="githubb" href="www.github.com" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
+                  </li>
+                  <li>
+                      <a class="linkedin" href="www.linkedin.com" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
+                  </li>
+                  <li>
+                      <a class="angelist" href="https://wellfound.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-angelist" width="15px" height="20px" src="images/angellist.png"></a>
+                  </li>
+                  <li>
+                      <a class="twitter" href="www.twitter.com" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
+                  </li>
+                  <li>
+                      <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="20px" height="16px" src="images/m.png"></a>
+                  </li>
+              </div>
+          </ul>
+          <nav>
+              <button type="button" class="my-resume">Get my resume</button>
+          </nav>
+      </div>
+      <div class="second">
+          <div class="languages">
+              <p class="lang poppins">Languages</p>
+              <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png"></button>
+          </div>
+          <ul class="lang-sub">
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png">
+                      <p class="js poppins">JavaScript</p>
+                  </div>
+              </li>
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png">
+                      <p class="html5 poppins">HTML</p>
+                  </div>
+              </li>
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png">
+                      <p class="css3 poppins">CSS</p>
+                  </div>
+              </li>
+          </ul>
+          <hr/>
+          <div class="frameworks">
+              <p class="frame poppins">Frameworks</p>
+              <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+          </div>
+          <hr/>
+          <div class="skills">
+              <p class="skill poppins">Skills</p>
+              <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+          </div>
+          <hr/>
+      </div>
+    </section>
+    <footer id="foot">
+      <section id="contact-form">
+          <h2 id="contactf" class="poppins">Contact me</h2>
+          <p id="desc3" class="poppins paragraph2">If you have an application you are interested in developing, a feature that you need built or a project that needs coding.  I'd love to help with it!
+          </p>
+          <form action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
+              <div class="box2">
+                  <input name="names" id="names" type="text" class="poppins" placeholder="Lorem Ipsum"  maxlength="30" required>
+              </div>
+              <div class="box2">
+                  <input name="email" id="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
+              </div>
+              <div class="box3">
+                  <textarea id="textarea" class="poppins" name="message" rows="5" cols="30" placeholder="Write your message here..." maxlength="500" required></textarea>
+              </div>
+              <button type="submit" id="getintouch" class="button3">Get in touch</button>
+          </form>
+      </section>
+    </footer>
+
+
+    <!-- <section class="about_myself">
       <h2 class="about poppins">About Myself</h2>
       <p class="desc poppins">
         Hello I'm a software developer! I can help you build a product, feature
@@ -484,7 +543,7 @@
             </button>
           </div>
           <ul class="lang-sub">
-            <!-- <div class="lang1"> -->
+            <div class="lang1">
             <li class="li-sp">
               <div class="row1">
                 <img
@@ -521,7 +580,7 @@
                 <p class="css3 poppins">CSS</p>
               </div>
             </li>
-            <!-- </div> -->
+            </div>
           </ul>
           <hr />
         </li>
@@ -578,6 +637,6 @@
           </ul>
           <button type="submit" class="btn">Get in touch</button>
         </form>
-    </footer>
+    </footer> -->
   </body>
 </html>
