Adjust styles in contact form section for mobile version.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <nav>
         <div class="container-5">
-            <div class="logo"><a href="#home"><p class="logo-txt poppins">My Logo</p></a></div>
+            <div class="logo"><a href="#home"><p class="logo-txt rotate poppins">My Logo</p></a></div>
             <div class="">
                 <ul class="nav-menu">
                     <li><a class="poppins nav-menu-text" href="#portfolio">Portfolio</a></li>
@@ -95,7 +95,7 @@
         </li>
       </ul>
     </section>
-    <section class="works">
+    <section id="portfolio" class="works">
       <div class="grid-1">
         <!-- First card -->
         <div class="work1">
