--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <title>Portfolio - Setup and Mobile First</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&family=Roboto&display=swap" rel="stylesheet"/>
   </head>
   <body>
     <header class="toolbar">
@@ -45,53 +42,16 @@
           <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
         </li>
         <li>
-          <a
-            class="linkedin"
-            href="https://www.linkedin.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              class="lin"
-              alt="linkedin"
-              width="20px"
-              height="20px"
-              src="images/linkedin.png"
-          /></a>
+          <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"/></a>
         </li>
         <li>
-          <a
-            class="m"
-            href="https://medium.com/"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img alt="logo-m" width="22px" height="20px" src="images/m.png"
-          /></a>
+          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"/></a>
         </li>
         <li>
-          <a
-            class="github"
-            href="https://www.github.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              alt="github"
-              width="18px"
-              height="20px"
-              src="images/github.png"
-          /></a>
+          <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"/></a>
         </li>
         <li>
-          <a
-            class="angellist"
-            href="https:wellfound.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              alt="logo-sign"
-              width="20px"
-              height="22px"
-              src="images/angellist.png"
-          /></a>
+          <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"/></a>
         </li>
       </ul>
     </section>
@@ -127,35 +87,17 @@
         </div>
         <!-- Second card -->
         <div class="work1">
-          <img
-            class="work1-img grow"
-            alt="work 2"
-            width="590px"
-            height="440px"
-            src="images/job2.png"
-          />
+          <img class="work1-img grow" alt="work 2" width="590px" height="440px" src="images/job2.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
             <li>
-              <img
-                class="dot"
-                alt=""
-                width="16px"
-                height="16px"
-                src="images/dot1.png"
-              />
+              <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
             </li>
             <li><p class="bed poppins">Back End Dev</p></li>
             <li>
               <p>
-                <img
-                  class="dot"
-                  alt=""
-                  width="16px"
-                  height="16px"
-                  src="images/dot1.png"
-                />
+                <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
               </p>
             </li>
             <li><p class="year poppins">2015</p></li>
@@ -173,35 +115,17 @@
         </div>
         <!-- Third card -->
         <div class="work1">
-          <img
-            class="work1-img grow"
-            alt="work 3"
-            width="590px"
-            height="440px"
-            src="images/job3.png"
-          />
+          <img class="work1-img grow" alt="work 3" width="590px" height="440px" src="images/job3.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
             <li>
-              <img
-                class="dot"
-                alt=""
-                width="16px"
-                height="16px"
-                src="images/dot1.png"
-              />
+              <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
             </li>
             <li><p class="bed poppins">Back End Dev</p></li>
             <li>
               <p>
-                <img
-                  class="dot"
-                  alt=""
-                  width="16px"
-                  height="16px"
-                  src="images/dot1.png"
-                />
+                <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
               </p>
             </li>
             <li><p class="year poppins">2015</p></li>
@@ -219,35 +143,17 @@
         </div>
         <!-- Fourth card -->
         <div class="work1">
-          <img
-            class="work1-img grow"
-            alt="work 4"
-            width="590px"
-            height="440px"
-            src="images/job4.png"
-          />
+          <img class="work1-img grow" alt="work 4" width="590px" height="440px" src="images/job4.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
             <li>
-              <img
-                class="dot"
-                alt=""
-                width="16px"
-                height="16px"
-                src="images/dot1.png"
-              />
+              <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
             </li>
             <li><p class="bed poppins">Back End Dev</p></li>
             <li>
               <p>
-                <img
-                  class="dot"
-                  alt=""
-                  width="16px"
-                  height="16px"
-                  src="images/dot1.png"
-                />
+                <img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"/>
               </p>
             </li>
             <li><p class="year poppins">2015</p></li>
@@ -452,191 +358,5 @@
           </form>
       </section>
     </footer>
-
-
-    <!-- <section class="about_myself">
-      <h2 class="about poppins">About Myself</h2>
-      <p class="desc poppins">
-        Hello I'm a software developer! I can help you build a product, feature
-        or website. Look through some of my work and experience! If you like
-        what you see and have a project you need coded, don't hesitate to
-        contact me.
-      </p>
-      <h3 class="connect poppins">LET'S CONNECT</h3>
-      <ul class="container-4">
-        <li>
-          <a
-            class="github"
-            href="https://www.github.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              alt="github"
-              width="18px"
-              height="20px"
-              src="images/github.png"
-          /></a>
-        </li>
-        <li>
-          <a
-            class="linkedin"
-            href="https://www.linkedin.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              class="lin"
-              alt="linkedin"
-              width="20px"
-              height="20px"
-              src="images/linkedin.png"
-          /></a>
-        </li>
-        <li>
-          <a
-            class="angellist"
-            href="https:wellfound.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              alt="logo-sign"
-              width="20px"
-              height="22px"
-              src="images/angellist.png"
-          /></a>
-        </li>
-        <li>
-          <a
-            class="twitter"
-            href="https://www.twitter.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img
-              alt="twitter"
-              width="20px"
-              height="20px"
-              src="images/twitter.png"
-          /></a>
-        </li>
-        <li>
-          <a
-            class="m"
-            href="https://medium.com/"
-            rel="noopener noreferrer"
-            target="_blank"
-            ><img alt="logo-m" width="22px" height="20px" src="images/m.png"
-          /></a>
-        </li>
-      </ul>
-      <button type="button" class="my-resume">Get my resume</button>
-      <ul>
-        <li>
-          <div class="languages">
-            <p class="lang poppins">Languages</p>
-            <button name="button-arrow1" type="button">
-              <img
-                class="arrow-down"
-                alt=""
-                width="512px"
-                height="512px"
-                src="images/down-arrow.png"
-              />
-            </button>
-          </div>
-          <ul class="lang-sub">
-            <div class="lang1">
-            <li class="li-sp">
-              <div class="row1">
-                <img
-                  class="js-img"
-                  alt="JS Logo"
-                  width="100px"
-                  height="100px"
-                  src="images/js.png"
-                />
-                <p class="js poppins">JavaScript</p>
-              </div>
-            </li>
-            <li class="li-sp">
-              <div class="row1">
-                <img
-                  class="html5-img"
-                  alt="HTML5 Logo"
-                  width="100px"
-                  height="101px"
-                  src="images/html5.png"
-                />
-                <p class="html5 poppins">HTML</p>
-              </div>
-            </li>
-            <li class="li-sp">
-              <div class="row1">
-                <img
-                  class="css3-img"
-                  alt="CSS3 Logo"
-                  width="100px"
-                  height="101px"
-                  src="images/css3.png"
-                />
-                <p class="css3 poppins">CSS</p>
-              </div>
-            </li>
-            </div>
-          </ul>
-          <hr />
-        </li>
-        <li>
-          <div class="frameworks">
-            <p class="frame poppins">Frameworks</p>
-            <button name="button-arrow2" type="button">
-              <img
-                class="arrow-right"
-                alt=""
-                width="512px"
-                height="512px"
-                src="images/right-arrow.png"
-              />
-            </button>
-          </div>
-          <hr />
-        </li>
-        <li>
-          <div class="skills">
-            <p class="skill poppins">Skills</p>
-            <button name="button-arrow3" type="button">
-              <img
-                class="arrow-right"
-                alt=""
-                width="512px"
-                height="512px"
-                src="images/right-arrow.png"
-              />
-            </button>
-          </div>
-          <hr />
-        </li>
-      </ul>
-    </section>
-    <footer class="footer">
-        <form id="form" action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
-          <h2 class="heading2">Contact me</h2>
-          <p class="paragraph2 poppins">
-            If you have an application you are interested in developing, a
-            feature that you need built or a project that needs coding.<br>I’d love
-            to help with it!
-          </p>
-          <ul>
-            <li class="box2">
-              <input id="name" name="name" type="text" class="poppins" placeholder="Lorem Ipsum" maxlength="30" required />
-            </li>
-            <li class="box2">
-              <input id="email" name="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required />
-            </li>
-            <li class="box3">
-              <textarea id="message" name="message" class="poppins" rows="5" cols="43" placeholder="Write your message here..." maxlength="500" required></textarea>
-            </li>
-          </ul>
-          <button type="submit" class="btn">Get in touch</button>
-        </form>
-    </footer> -->
   </body>
 </html>
