--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           </ul>
       </nav>
     </header>
+
     <section class="headline poppins">
       <h1 class="name" id="delay">I'm Juan Carlos. <br />Glad to see you!</h1>
       <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
@@ -51,15 +52,12 @@
         </li>
       </ul>
     </section>
-    <section class="square-shape">
-      <div class="grow-shape">
-      </div>
-    </section>
+
     <section id="portfolio" class="works">
       <div class="grid-1">
         <!-- First card -->
         <div class="work1">
-          <img class="work1-img" alt="work 1" width="590px" height="440px" src="images/job1.png"/>
+          <img class="work1-img grow" alt="work 1" width="590px" height="440px" src="images/job1.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -74,7 +72,10 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <p class="desc2 poppins">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
@@ -84,7 +85,7 @@
         </div>
         <!-- Second card -->
         <div class="work1">
-          <img class="work1-img" alt="work 2" width="590px" height="440px" src="images/job2.png"/>
+          <img class="work1-img grow" alt="work 2" width="590px" height="440px" src="images/job2.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -99,7 +100,9 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.
+          <p class="desc2 poppins">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
           </p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
@@ -110,7 +113,7 @@
         </div>
         <!-- Third card -->
         <div class="work1">
-          <img class="work1-img" alt="work 3" width="590px" height="440px" src="images/job3.png"/>
+          <img class="work1-img grow" alt="work 3" width="590px" height="440px" src="images/job3.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -125,7 +128,9 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.
+          <p class="desc2 poppins">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
           </p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
@@ -136,7 +141,7 @@
         </div>
         <!-- Fourth card -->
         <div class="work1">
-          <img class="work1-img" alt="work 4" width="590px" height="440px" src="images/job4.png"/>
+          <img class="work1-img grow" alt="work 4" width="590px" height="440px" src="images/job4.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -151,7 +156,9 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.
+          <p class="desc2 poppins">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
           </p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
@@ -162,8 +169,7 @@
         </div>
       </div>
       <div class="grid-1b">
-        <!-- Card One -->
-        <div class="rows">
+        <div class="rows"> <!-- Row 1-->
             <div class="photo1">
                 <img class="work1b-img grow" alt="work 1" width="" height="" src="images/job3b.png">
             </div>
@@ -187,8 +193,7 @@
                 </nav>
             </div>
         </div>
-        <!-- Card Two -->
-        <div class="rows">
+        <div class="rows"> <!-- Row 2-->
             <div class="work1b">
                 <h2 class="work-text1b poppins">Multi-Post Stories</h2>
                 <ul class="flex1">
@@ -213,8 +218,7 @@
                 <img class="work1b-img grow" alt="work 2" width="" height="" src="images/job4b.png">
             </div>
         </div>
-        <!-- Card Three -->
-        <div class="rows">
+        <div class="rows"> <!-- Row 3-->
             <div class="photo1">
                 <img class="work1b-img grow" alt="work 3" width="" height="" src="images/job1b.png">
             </div>
@@ -239,8 +243,7 @@
                 </nav>
             </div>
         </div>
-        <!-- Card Four -->
-        <div class="rows">
+        <div class="rows"> <!-- Row 4-->
             <div class="work1b">
                 <h2 class="work-text1b poppins">Uber navigation</h2>
                 <ul class="flex1">
@@ -267,96 +270,92 @@
         </div>
       </div>
     </section>
+
     <section id="about-me" class="about_myself">
-      <h2 class="about poppins">About Myself</h2>
-      <p class="desc poppins">Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.
-      </p>
-      <h3 class="connect poppins">LET'S CONNECT</h3>
-      <ul class="container-4">
-        <li>
-          <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"/></a>
-        </li>
-        <li>
-          <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"/></a>
-        </li>
-        <li>
-          <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"/></a>
-        </li>
-        <li>
-          <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
-        </li>
-        <li>
-          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"/></a>
-        </li>
-      </ul>
-      <button type="button" class="my-resume">Get my resume</button>
-      <ul>
-        <li>
+      <div class="first">
+          <h2 class="about poppins">About Myself</h2>
+          <p class="desc4 poppins">Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+          <p class="connect poppins">LET'S CONNECT</p>
+          <ul>
+            <div class="container-4">
+              <li>
+                  <a class="githubb" href="www.github.com" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
+              </li>
+              <li>
+                  <a class="linkedin" href="www.linkedin.com" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
+              </li>
+              <li>
+                  <a class="angelist" href="https://wellfound.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-angelist" width="15px" height="20px" src="images/angellist.png"></a>
+              </li>
+              <li>
+                  <a class="twitter" href="www.twitter.com" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
+              </li>
+              <li>
+                  <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="20px" height="16px" src="images/m.png"></a>
+              </li>
+            </div>
+          </ul>
+          <nav>
+              <button type="button" class="my-resume">Get my resume</button>
+          </nav>
+      </div>
+      <div class="second">
           <div class="languages">
-            <p class="lang poppins">Languages</p>
-            <button name="button-arrow1" type="button">
-              <img class="arrow-down" alt="" width="512px" height="512px" src="images/down-arrow.png"/>
-            </button>
+              <p class="lang poppins">Languages</p>
+              <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png"></button>
           </div>
           <ul class="lang-sub">
-            <li class="li-sp">
-              <div class="row1">
-                <img class="js-img" alt="JS Logo" width="100px" height="100px" src="images/js.png"/>
-                <p class="js poppins">JavaScript</p>
-              </div>
-            </li>
-            <li class="li-sp">
-              <div class="row1">
-                <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png"/>
-                <p class="html5 poppins">HTML</p>
-              </div>
-            </li>
-            <li class="li-sp">
-              <div class="row1">
-                <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png"/>
-                <p class="css3 poppins">CSS</p>
-              </div>
-            </li>
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png">
+                      <p class="js poppins">JavaScript</p>
+                  </div>
+              </li>
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png">
+                      <p class="html5 poppins">HTML</p>
+                  </div>
+              </li>
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png">
+                      <p class="css3 poppins">CSS</p>
+                  </div>
+              </li>
           </ul>
-          <hr />
-        </li>
-        <li>
+          <hr/>
           <div class="frameworks">
-            <p class="frame poppins">Frameworks</p>
-            <button name="button-arrow2" type="button">
-              <img class="arrow-right" alt="" width="512px" height="512px" src="images/right-arrow.png"/>
-            </button>
+              <p class="frame poppins">Frameworks</p>
+              <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
           </div>
-          <hr />
-        </li>
-        <li>
+          <hr/>
           <div class="skills">
-            <p class="skill poppins">Skills</p>
-            <button name="button-arrow3" type="button">
-              <img class="arrow-right" alt="" width="512px" height="512px" src="images/right-arrow.png"/>
-            </button>
+              <p class="skill poppins">Skills</p>
+              <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
           </div>
-          <hr />
-        </li>
-      </ul>
+          <hr/>
+      </div>
     </section>
-    <footer id="contact-form" class="footer">
-        <form id="form" action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
-          <h2 class="heading2">Contact me</h2>
-          <p class="paragraph2 poppins">If you have an application you are interested in developing, a feature that you need built or a project that needs coding.<br>I’d love to help with it!</p>
-          <ul>
-            <li class="box2">
-              <input id="name" name="name" type="text" class="poppins" placeholder="Lorem Ipsum" maxlength="30" required />
-            </li>
-            <li class="box2">
-              <input id="email" name="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required />
-            </li>
-            <li class="box3">
-              <textarea id="message" name="message" class="poppins" rows="5" cols="43" placeholder="Write your message here..." maxlength="500" required></textarea>
-            </li>
-          </ul>
-          <button type="submit" class="btn">Get in touch</button>
-        </form>
+
+    <footer id="foot">
+      <section id="contact-form">
+          <h2 id="contactf" class="poppins">Contact me</h2>
+          <p id="desc3" class="poppins paragraph2">If you have an application you are interested in developing, a feature that you need built or a project that needs coding.  I'd love to help with it!
+          </p>
+          <form action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
+              <div class="box2">
+                  <input name="names" id="names" type="text" class="poppins" placeholder="Lorem Ipsum"  maxlength="30" required>
+              </div>
+              <div class="box2">
+                  <input name="email" id="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
+              </div>
+              <div class="box3">
+                  <textarea id="textarea" class="poppins" name="message" rows="5" cols="30" placeholder="Write your message here..." maxlength="500" required></textarea>
+              </div>
+              <button type="submit" id="getintouch" class="button3">Get in touch</button>
+          </form>
+      </section>
     </footer>
   </body>
 </html>
