Edit css & html file to adjust styles of contact form in mobile version.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="toolbar">
       <div class="container-2">
         <div class="logo">
-          <a href="#home"><p class="logo-txt poppins">My Logo</p></a>
+          <a href="#home"><p class="logo-txt rotate poppins">My Logo</p></a>
         </div>
         <nav class="menu">
           <img class="menu-im" alt="Menu" width="24px" height="24px" src="images/menu.svg"/>
@@ -36,19 +36,19 @@
       <h3 class="connect">LET'S CONNECT</h3>
       <ul class="container-3">
         <li>
-          <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
+          <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
         </li>
         <li>
-          <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin rotate" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"/></a>
+          <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"/></a>
         </li>
         <li>
-          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="logo-m" width="22px" height="20px" src="images/m.png"/></a>
+          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"/></a>
         </li>
         <li>
-          <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="github" width="18px" height="20px" src="images/github.png"/></a>
+          <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"/></a>
         </li>
         <li>
-          <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="logo-sign" width="20px" height="22px" src="images/angellist.png"/></a>
+          <a class="angellist" href="https://wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"/></a>
         </li>
       </ul>
     </section>
@@ -248,9 +248,9 @@
                 <h2 class="work-text1b poppins">Uber navigation</h2>
                 <ul class="flex1">
                     <li><p class="canopy poppins">Uber</p></li>
-                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png" /></li>
                     <li><p class="bed poppins">Lead Developer</p></li>
-                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png" /></p></li>
                     <li><p class="year poppins">2018</p></li>
                 </ul>
                 <p class="desc2 poppins">A smart assistant to make driving more safe, efficient and fun by unlocking your most expensive computer, your car.</p>
@@ -265,7 +265,7 @@
                 </nav>
             </div>
             <div class="photo2">
-                <img class="work1b-img grow" alt="work 4" width="" height="" src="images/job2b.png">
+                <img class="work1b-img grow" alt="work 4" width="" height="" src="images/job2b.png" />
             </div>
         </div>
       </div>
@@ -279,19 +279,19 @@
           <ul>
             <div class="container-4">
               <li>
-                  <a class="githubb" href="www.github.com" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
+                  <a class="githubb" href="https://www.github.com" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png" /></a>
               </li>
               <li>
-                  <a class="linkedin" href="www.linkedin.com" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
+                  <a class="linkedin" href="https://www.linkedin.com" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png" /></a>
               </li>
               <li>
-                  <a class="angelist" href="https://wellfound.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-angelist" width="15px" height="20px" src="images/angellist.png"></a>
+                  <a class="angelist" href="https://wellfound.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-angelist" width="15px" height="20px" src="images/angellist.png" /></a>
               </li>
               <li>
-                  <a class="twitter" href="www.twitter.com" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
+                  <a class="twitter" href="https://www.twitter.com" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png" /></a>
               </li>
               <li>
-                  <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="20px" height="16px" src="images/m.png"></a>
+                  <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="20px" height="16px" src="images/m.png" /></a>
               </li>
             </div>
           </ul>
@@ -302,24 +302,24 @@
       <div class="second">
           <div class="languages">
               <p class="lang poppins">Languages</p>
-              <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png"></button>
+              <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png" /></button>
           </div>
           <ul class="lang-sub">
               <li class="li-sp">
                   <div class="row1">
-                      <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png">
+                      <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png" />
                       <p class="js poppins">JavaScript</p>
                   </div>
               </li>
               <li class="li-sp">
                   <div class="row1">
-                      <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png">
+                      <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png" />
                       <p class="html5 poppins">HTML</p>
                   </div>
               </li>
               <li class="li-sp">
                   <div class="row1">
-                      <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png">
+                      <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png" />
                       <p class="css3 poppins">CSS</p>
                   </div>
               </li>
@@ -327,12 +327,12 @@
           <hr/>
           <div class="frameworks">
               <p class="frame poppins">Frameworks</p>
-              <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+              <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png" /></button>
           </div>
           <hr/>
           <div class="skills">
               <p class="skill poppins">Skills</p>
-              <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+              <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png" /></button>
           </div>
           <hr/>
       </div>
