--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
           </ul>
       </nav>
     </header>
-
     <section class="headline poppins">
       <h1 class="name" id="delay">I'm Juan Carlos. <br />Glad to see you!</h1>
       <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
@@ -52,7 +51,6 @@
         </li>
       </ul>
     </section>
-
     <section id="portfolio" class="works">
       <div class="grid-1">
         <!-- First card -->
@@ -270,7 +268,6 @@
         </div>
       </div>
     </section>
-
     <section id="about-me" class="about_myself">
       <div class="first">
           <h2 class="about poppins">About Myself</h2>
@@ -337,25 +334,21 @@
           <hr/>
       </div>
     </section>
-
     <footer id="foot">
-      <section id="contact-form">
-          <h2 id="contactf" class="poppins">Contact me</h2>
-          <p id="desc3" class="poppins paragraph2">If you have an application you are interested in developing, a feature that you need built or a project that needs coding.  I'd love to help with it!
-          </p>
-          <form action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
-              <div class="box2">
-                  <input name="names" id="names" type="text" class="poppins" placeholder="Lorem Ipsum"  maxlength="30" required>
-              </div>
-              <div class="box2">
-                  <input name="email" id="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
-              </div>
-              <div class="box3">
-                  <textarea id="textarea" class="poppins" name="message" rows="5" cols="30" placeholder="Write your message here..." maxlength="500" required></textarea>
-              </div>
-              <button type="submit" id="getintouch" class="button3">Get in touch</button>
-          </form>
-      </section>
+        <h2 id="contactf" class="poppins">Contact me</h2>
+        <p id="desc3" class="poppins paragraph2">If you have an application you are interested in developing, a feature that you need built or a project that needs coding.  I'd love to help with it!</p>
+        <form action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
+          <div class="box2">
+              <input name="names" id="names" type="text" class="poppins" placeholder="Lorem Ipsum"  maxlength="30" required>
+          </div>
+          <div class="box2">
+              <input name="email" id="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
+          </div>
+          <div class="box3">
+              <textarea id="textarea" class="poppins" name="message" rows="5" cols="30" placeholder="Write your message here..." maxlength="500" required></textarea>
+          </div>
+          <button type="submit" id="getintouch" class="button3">Get in touch</button>
+        </form>
     </footer>
   </body>
 </html>
