Edit work cards styles in mobile version.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul class="nav-menu">
             <li><a class="poppins nav-menu-text" href="#portfolio">Portfolio</a></li>
             <li><a class="poppins nav-menu-text" href="#about-me">About</a></li>
-            <li><a class="poppins nav-menu-text" href="#contact-form">Contact</a></li>
+            <li><a class="poppins nav-menu-text" href="#foot">Contact</a></li>
           </ul>
       </nav>
     </header>
@@ -70,10 +70,7 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
+          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
@@ -98,10 +95,7 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
+          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
@@ -126,10 +120,7 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
+          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
@@ -154,10 +145,7 @@
             </li>
             <li><p class="year poppins">2015</p></li>
           </ul>
-          <p class="desc2 poppins">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
+          <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
