Change alternative text of html images for accessibility

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
           <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"/></a>
         </li>
         <li>
-          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"/></a>
+          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="medium" width="22px" height="20px" src="images/m.png"/></a>
         </li>
         <li>
           <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"/></a>
         </li>
         <li>
-          <a class="angellist" href="https://wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"/></a>
+          <a class="angellist" href="https://wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="angellist" width="20px" height="22px" src="images/angellist.png"/></a>
         </li>
       </ul>
     </section>
@@ -55,7 +55,7 @@
       <div class="grid-1">
         <!-- First card -->
         <div class="work1">
-          <img class="work1-img grow" alt="work 1" width="590px" height="440px" src="images/job1.png"/>
+          <img class="work1-img grow" alt="work tonic - canopy" width="590px" height="440px" src="images/job1.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -80,7 +80,7 @@
         </div>
         <!-- Second card -->
         <div class="work1">
-          <img class="work1-img grow" alt="work 2" width="590px" height="440px" src="images/job2.png"/>
+          <img class="work1-img grow" alt="work Multi Post Stories - canopy" width="590px" height="440px" src="images/job2.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -105,7 +105,7 @@
         </div>
         <!-- Third card -->
         <div class="work1">
-          <img class="work1-img grow" alt="work 3" width="590px" height="440px" src="images/job3.png"/>
+          <img class="work1-img grow" alt="work tonic - canopy" width="590px" height="440px" src="images/job3.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -130,7 +130,7 @@
         </div>
         <!-- Fourth card -->
         <div class="work1">
-          <img class="work1-img grow" alt="work 4" width="590px" height="440px" src="images/job4.png"/>
+          <img class="work1-img grow" alt="work Multi Post Stories - canopy" width="590px" height="440px" src="images/job4.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
             <li><p class="canopy poppins">CANOPY</p></li>
@@ -267,16 +267,16 @@
                   <a class="githubb" href="https://www.github.com" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png" /></a>
               </li>
               <li>
-                  <a class="linkedin" href="https://www.linkedin.com" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png" /></a>
+                  <a class="linkedin" href="https://www.linkedin.com" target="_blank"><img class="linkedin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png" /></a>
               </li>
               <li>
-                  <a class="angelist" href="https://wellfound.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-angelist" width="15px" height="20px" src="images/angellist.png" /></a>
+                  <a class="angelist" href="https://wellfound.com/" rel="noopener noreferrer" target="_blank"><img alt="angelist" width="15px" height="20px" src="images/angellist.png" /></a>
               </li>
               <li>
                   <a class="twitter" href="https://www.twitter.com" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png" /></a>
               </li>
               <li>
-                  <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="20px" height="16px" src="images/m.png" /></a>
+                  <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="medium" width="20px" height="16px" src="images/m.png" /></a>
               </li>
             </div>
           </ul>
@@ -292,7 +292,7 @@
           <ul class="lang-sub">
               <li class="li-sp">
                   <div class="row1">
-                      <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png" />
+                      <img class="js-img" alt="JavaScript Logo" width="100px" height= "100px" src="images/js.png" />
                       <p class="js poppins">JavaScript</p>
                   </div>
               </li>
