Edit css & html files to correct color contrast for different elements.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="logo">
           <a href="#home"><p class="logo-txt rotate poppins">My Logo</p></a>
         </div>
-        <nav class="menu">
-          <img class="menu-im" alt="Menu" width="24px" height="24px" src="images/menu.svg"/>
+        <nav class="menu">        
+          <a><img class="menu-im" alt="Menu" width="24px" height="24px" src="images/menu.svg"/></a>
         </nav>
       </div>
       <nav class="container-5">
