Edit alt text values for arrow images in languages card of about myself section.

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="second">
           <div class="languages">
               <p class="lang poppins">Languages</p>
-              <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png" /></button>
+              <button name="button-arrow1" type="button"><img class="arrow-down" alt="down arrow" width="512px" height= "512px" src="images/down-arrow.png" /></button>
           </div>
           <ul class="lang-sub">
               <li class="li-sp">
@@ -312,12 +312,12 @@
           <hr/>
           <div class="frameworks">
               <p class="frame poppins">Frameworks</p>
-              <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png" /></button>
+              <button name="button-arrow2" type="button"><img class="arrow-right" alt="right arrow" width="512px" height= "512px" src="images/right-arrow.png" /></button>
           </div>
           <hr/>
           <div class="skills">
               <p class="skill poppins">Skills</p>
-              <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png" /></button>
+              <button name="button-arrow3" type="button"> <img class="arrow-right" alt="right arrow" width="512px" height= "512px" src="images/right-arrow.png" /></button>
           </div>
           <hr/>
       </div>
