Setup linters and JavaScript file for mobile menu branch.

--- a/index.html
+++ b/index.html
@@ -338,5 +338,6 @@
           <button type="submit" id="getintouch" class="button3">Get in touch</button>
         </form>
     </footer>
+    <script src="./js/mobile.js"></script>
   </body>
 </html>
