Edit html & css files to add modal window and links.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
           <img class="menu-im" alt="Menu" width="24px" height="24px" src="images/menu.svg"/>
         </nav>
       </div>
+      <div class="overlay">
+        <div class="toolbar-2">
+          <img class="cancel1" alt="menu-cancel" width="24px" height="24px" src="images/cancel1.png">
+        </div>
+        <ul>
+          <li class="overlay-li poppins"><a href="#portfolio">Portfolio</a></li>
+          <li class="overlay-li poppins"><a href="#about-me">About Myself</a></li>
+          <li class="overlay-li poppins"><a href="foot">Contact Me</a></li>
+        </ul>
+      </div>
       <nav class="container-5">
           <a href="#home" class="logo-text"><p class="logo-txt rotate poppins">My Logo</p></a>
           <ul class="nav-menu">
