Edit css & html files to correct alignment of elements; correct eslint errors in JS file.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <img class="cancel1" alt="menu-cancel" width="24px" height="24px" src="images/cancel1.png">
         </div>
         <ul>
-          <li class="overlay-li poppins"><a href="#portfolio">Portfolio</a></li>
-          <li class="overlay-li poppins"><a href="#about-me">About Myself</a></li>
-          <li class="overlay-li poppins"><a href="foot">Contact Me</a></li>
+          <li class="overlay-li poppins"><a class="a-li" href="#portfolio">Portfolio</a></li>
+          <li class="overlay-li poppins"><a class="a-li" href="#about-me">About Myself</a></li>
+          <li class="overlay-li poppins"><a class="a-li" href="#foot">Contact Me</a></li>
         </ul>
       </div>
       <nav class="container-5">
