Edit css & html files to correct required changes.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="toolbar-2">
           <img class="cancel1" alt="menu-cancel" width="24px" height="24px" src="images/cancel1.png">
         </div>
-        <ul>
+        <ul class="overlay-ul">
           <li class="overlay-li poppins"><a class="a-li" href="#portfolio">Portfolio</a></li>
-          <li class="overlay-li poppins"><a class="a-li" href="#about-me">About Myself</a></li>
-          <li class="overlay-li poppins"><a class="a-li" href="#foot">Contact Me</a></li>
+          <li class="overlay-li poppins"><a class="a-li" href="#about-me">About</a></li>
+          <li class="overlay-li poppins"><a class="a-li" href="#foot">Contact</a></li>
         </ul>
       </div>
       <nav class="container-5">
