Add JS file to create the work section.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
       </ul>
     </section>
     <section id="portfolio" class="works">
-      <div class="grid-1">
+      <div id="modal">
+      </div>
+      <div class="grid-1 hidegr">
         <!-- First card -->
         <div class="work1">
           <img class="work1-img grow" alt="work tonic - canopy" width="590px" height="440px" src="images/job1.png"/>
@@ -164,7 +166,7 @@
           <button type="button" class="see-project poppins">See project</button>
         </div>
       </div>
-      <div class="grid-1b">
+      <div class="grid-1b hidegr">
         <div class="rows"> <!-- Row 1-->
             <div class="photo1">
                 <img class="work1b-img grow" alt="work 1" width="" height="" src="images/job3b.png">
@@ -265,6 +267,8 @@
             </div>
         </div>
       </div>
+      <div id="grid2">
+      </div>
     </section>
     <section id="about-me" class="about_myself">
       <div class="first">
@@ -352,5 +356,6 @@
         </form>
     </footer>
     <script src="./js/mobile.js"></script>
+    <script src="./js/popup-window.js"></script>></script>
   </body>
 </html>
