Edit css & html files to adjust style of validation error message.

--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
           </div>
           <button type="submit" id="getintouch" class="button3">Get in touch</button>
           <div id="myModal" class="modal">
-            <!-- Modal content -->
             <div class="modal-content">
               <p><strong>ERROR: </strong>Email letters must be in lowercase!</p>
               <p class="close">&times;</p>
+            </div>
           </div>
         </form>
     </footer>
