Edit README.md file to document the project; add JS file and linked it in the HTML.

--- a/index.html
+++ b/index.html
@@ -359,5 +359,6 @@
     </footer>
     <script src="./js/mobile.js"></script>
     <script src="./js/validation.js"></script>
+    <script src="./js/storage.js"></script>
   </body>
 </html>
