Edit JS files to complete storage functions; integrate 2 JS files in 1.

--- a/index.html
+++ b/index.html
@@ -337,16 +337,16 @@
         <p id="desc3" class="poppins paragraph2">If you have an application you are interested in developing, a feature that you need built or a project that needs coding.  I'd love to help with it!</p>
         <form id="form1" action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
           <div class="box2">
-              <label for="names" class="label">Name:</label>
-              <input name="names" id="names" type="text" class="poppins" placeholder="Lorem Ipsum"  maxlength="30" required>
+            <label for="names" class="label">Name:</label>
+            <input name="names" id="names" type="text" class="poppins" placeholder="Lorem Ipsum"  maxlength="30" required>
           </div>
           <div class="box2">
             <label for="email" class="label">Email:</label>
-              <input name="email" id="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
+            <input name="email" id="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
           </div>
           <div class="box3">
             <label for="textarea" class="label">Comment:</label>
-              <textarea id="textarea" class="poppins" name="message" rows="5" cols="30" placeholder="Write your message here..." maxlength="500" required></textarea>
+            <textarea id="textarea" class="poppins" name="message" rows="5" cols="30" placeholder="Write your message here..." maxlength="500" required></textarea>
           </div>
           <button type="submit" id="getintouch" class="button3">Get in touch</button>
           <div id="myModal" class="modal">
@@ -358,7 +358,6 @@
         </form>
     </footer>
     <script src="./js/mobile.js"></script>
-    <script src="./js/validation.js"></script>
-    <script src="./js/storage.js"></script>
+    <script src="./js/validationandstorage.js"></script>
   </body>
 </html>
