Edit index & JavaScript files to add code for popup window.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
       </ul>
     </section>
     <section id="portfolio" class="works">
-      <div id="modal">
-      </div>
       <div class="grid-1 hidegr">
         <!-- First card -->
         <div class="work1">
@@ -267,7 +265,11 @@
             </div>
         </div>
       </div>
+      <div id="modal">
+      </div>
       <div id="grid2">
+      </div>
+      <div id="grid3">
       </div>
     </section>
     <section id="about-me" class="about_myself">
