Add some bugs to seek.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h1 class="name" id="delay">I'm Juan Carlos. <br />Glad to see you!</h1>
       <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
       <h3 class="connect">LET'S CONNECT</h3>
-      <ul class="container-3">
+      <ul class="container">
         <li>
           <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
         </li>
@@ -62,7 +62,7 @@
       </ul>
     </section>
     <section id="portfolio" class="works">
-      <div class="grid-1">
+      <div class="grid-1b">
         <!-- First card -->
         <div class="work1">
           <img class="work1-img grow" alt="work tonic - canopy" width="590px" height="440px" src="images/job1.png"/>
@@ -272,7 +272,7 @@
           <p class="desc4 poppins">Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
           <p class="connect poppins">LET'S CONNECT</p>
           <ul>
-            <div class="container-4">
+            <div class="container">
               <li>
                   <a class="githubb" href="https://www.github.com" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png" /></a>
               </li>
@@ -299,7 +299,7 @@
               <p class="lang poppins">Languages</p>
               <button name="button-arrow1" type="button"><img class="arrow-down" alt="down arrow" width="512px" height= "512px" src="images/down-arrow.png" /></button>
           </div>
-          <ul class="lang-sub">
+          <ul class="lang-su">
               <li class="li-sp">
                   <div class="row1">
                       <img class="js-img" alt="JavaScript Logo" width="100px" height= "100px" src="images/js.png" />
